Se crea pantalla galeria

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,9 +1,12 @@
-<p>
-    about works!
-</p>
-
-<img src="assets/img/3.jpg" style="height: 5rem">
+<h1>
+    ABOUT
+</h1>
+<hr>
 
 <p>
     <button type="button" routerLink="/home">Volver al Home</button>
+    <button type="button" routerLink="/galeria">Ir Galeria</button>
 </p>
+<hr>
+
+<img src="assets/img/3.jpg" style="height: 5rem">
