--- a/src/app/pages/galeria/galeria.component.html
+++ b/src/app/pages/galeria/galeria.component.html
@@ -4,10 +4,10 @@
 <hr>
 
 <img src="https://st-listas.20minutos.es/images/2008-07/28068/list_640px.jpg?1215248986" style="height: 10rem">
-<img src="http://1.bp.blogspot.com/-SfV1dOoW888/T5nnFtmilHI/AAAAAAAAAGw/nfmjmDJkokU/s1600/png2.jpg" style="height: 10rem">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSaUW5faRjy_l5hrvnGGQDxqd6X2qRX3pL8V7MTXxKcm4tlr3tV" style="height: 10rem">
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpk42M2NOp-5BgoDxMYG0jaFQD6uSJqUgERx15CTVCUACIv17k" style="height: 10rem">
 <img src="https://ugc.kn3.net/i/origin/http://st-listas.20minutos.es/images/2011-05/287091/2992444_640px.jpg?1304464883" style="height: 10rem">
-<img src="http://www.chileindomito.org/wp-content/uploads/2016/06/JPH2198-copia.jpg" style="height: 10rem">
+<img src="https://img.etimg.com/photo/62366641/fruitplatter.jpg" style="height: 10rem">
 <hr>
 
 <p>
