--- a/src/app/pages/galeria/galeria.component.html
+++ b/src/app/pages/galeria/galeria.component.html
@@ -1,4 +1,4 @@
-<h1>
+<h1 style="text-align: center;">
     Galeria
 </h1>
 <hr>
@@ -8,6 +8,7 @@
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpk42M2NOp-5BgoDxMYG0jaFQD6uSJqUgERx15CTVCUACIv17k" style="height: 10rem">
 <img src="https://ugc.kn3.net/i/origin/http://st-listas.20minutos.es/images/2011-05/287091/2992444_640px.jpg?1304464883" style="height: 10rem">
 <img src="https://img.etimg.com/photo/62366641/fruitplatter.jpg" style="height: 10rem">
+<img src="https://img.etimg.com/thumb/msid-64582797,width-640,resizemode-4,imgsize-405100/opt-for-a-well-balanced-diet.jpg" style="height: 10rem">
 <hr>
 
 <p>
